--- a/tools/benchmarking.Rmd
+++ b/tools/benchmarking.Rmd
@@ -39,13 +39,15 @@ R data frames in future python chunks.
 ```{python}
 ```
 
+Here we benchmark moments++ against moments.LD when s=0
+
 # Neutrality
 
 ## No-migration
 
 ### Building Demes files
 
-```{r, demes-neutral-2-pop, include=F, eval=F, results=F, message=F, warning=F}
+```{r, demes-neutral-2-pop, include=F, eval=T, results=F, message=F, warning=F}
 
 N1 <- 10000
 N2 <- c(N1, N1 / 10)
@@ -155,7 +157,7 @@ for(i in 1:n_models) {
 
 ### Running moments++
 
-```{bash run-moments++, engine.opts='-i', include=F, eval=F, results=F, message=F, warning=F}
+```{bash run-moments++, engine.opts='-i', include=F, eval=T, results=F, message=F, warning=F}
 
 source ~/.bashrc
 
@@ -171,7 +173,7 @@ cd ../..
 
 ### Running moments.LD
 
-```{python run-momentsLD, include=F, eval=F, results=F}
+```{python run-momentsLD, include=F, eval=T, results=F}
 
 import moments.LD
 import demes
@@ -217,7 +219,7 @@ for i in range(1, n_models):
 
 ### Plots
 
-```{r neutral-bench, include=T, eval=F, results=F, message=F, warning=F}
+```{r neutral-bench, include=T, eval=T, results=F, message=F, warning=F}
 
 core_stats <- c("DD_1_1", 
                 "DD_1_2", 
@@ -286,9 +288,13 @@ save_plot("neutrality/no_migration/ratios_no-mig.pdf", p1, base_height=12, base_
 
 # Selection 1-population
 
+Here we benchmark against moments.TwoLocus and TwoLocusSim
+
+## Benchmark 
+
 ### Building Demes files
 
-```{r, demes-selected-1-pop, include=F, eval=F, results=F, message=F, warning=F}
+```{r, demes-selected-1-pop, include=F, eval=T, results=F, message=F, warning=F}
 
 N <- c(1000, 10000)
 u <- 1e-7
@@ -299,7 +305,7 @@ params <- crossing(N, u, r, s)
 params$scenario <- 1:nrow(params)
 n_models <- nrow(params)
 
-write.csv(params, "selection/single-pop/params.csv", quote=F, row.names=F)
+write.csv(params, "selection/single-pop/bench/params.csv", quote=F, row.names=F)
 
 Sys.setenv(num_models=n_models)
 
@@ -309,7 +315,7 @@ py$n_models <- as.integer(n_models + 1) # because python is indexed from zero
 for(i in 1:n_models) {
   
   name <- paste("model_", i, sep="")
-  sink(paste("selection/single-pop/", name, ".yaml", sep=""))
+  sink(paste("selection/single-pop/bench/", name, ".yaml", sep=""))
   
   cat("time_units: generations\n")
   cat("demes:\n")
@@ -347,11 +353,11 @@ for(i in 1:n_models) {
 
 ### Running TwoLocusSim
 
-```{bash run-twoLocusSim, engine.opts='-i', include=F, eval=F, results=F, message=F, warning=F}
+```{bash run-twoLocusSim, engine.opts='-i', include=F, eval=T, results=F, message=F, warning=F}
 
 source ~/.bashrc
 
-cd selection/single-pop
+cd selection/single-pop/bench
 
 sed 1d params.csv | while IFS=, read -r N u r s m
 do
@@ -393,41 +399,41 @@ do
   twoLocusSim params=sim_sel.bpp N=$N u=$u r=$r s=$s label=$m tag=rep_30
 done
 
-cd ../..
+cd ../../..
 
 ```
 
 ### Running moments++
 
-```{bash run-moments++-1-pop, engine.opts='-i', include=F, eval=F, results=F, message=F, warning=F}
+```{bash run-moments++-1-pop, engine.opts='-i', include=F, eval=T, results=F, message=F, warning=F}
 
 source ~/.bashrc
 
-cd selection/single-pop
+cd selection/single-pop/bench
 
 for((i=1;i<=$num_models;i++))
 do
   momentspp params=opt.bpp FILE=model_$i.yaml LABEL=model_$i ORDER=25
 done
 
-cd ../..
+cd ../../..
 ```
 
 ### Running moments.TwoLocus
 
 For benchmarking the single population case, we use equilibrium demography:
 
-```{python run-momentsTwoLocus, include=F, eval=F, results=F}
+```{python run-momentsTwoLocus, include=F, eval=T, results=F}
 
 import moments.TwoLocus
 import sys, os
 import numpy as np
     
 for i in range(1, n_models):
-  with open(f"selection/single-pop/moments_twoLocus_n40_model_{i}.csv", "w+") as fout:
+  with open(f"selection/single-pop/bench/moments_twoLocus_n40_model_{i}.csv", "w+") as fout:
       n_samples = 40
       
-     # i - 1 because python is indexed from zero
+      # i - 1 because python is indexed from zero
       Ne = params["N"][i - 1] 
       u = params["u"][i - 1] 
       r = params["r"][i - 1] 
@@ -455,7 +461,7 @@ for i in range(1, n_models):
       assert np.allclose(fs_left, fs)
 
 for i in range(1, n_models):
-  with open(f"selection/single-pop/moments_twoLocus_n60_model_{i}.csv", "w+") as fout:
+  with open(f"selection/single-pop/bench/moments_twoLocus_n60_model_{i}.csv", "w+") as fout:
       n_samples = 60
       
       # i - 1 because python is indexed from zero
@@ -488,7 +494,7 @@ for i in range(1, n_models):
 
 ### Plots
 
-```{r, plots-selected-1-pop, include=T, eval=F, results=F, message=F, warning=F}
+```{r, plots-selected-1-pop, include=T, eval=T, results=F, message=F, warning=F}
 
 commom_stats <- c("DD_0_0",
                   "Dr_0_0_(1-2p0)^1",
@@ -496,9 +502,10 @@ commom_stats <- c("DD_0_0",
                   "Hr_0_0",
                   "pi2_0_0_0_0")
 
+# from moments++
 expectation <- numeric()
 for(i in 1:n_models) {
-  vals <- read.table(paste("selection/single-pop/model_", i, "_expectations.txt", sep=""))
+  vals <- read.table(paste("selection/single-pop/bench/model_", i, "_expectations.txt", sep=""))
   vals <- subset(vals, V1 %in% commom_stats)$V3
   expectation <- c(expectation, vals)
 }
@@ -515,11 +522,10 @@ mpp <- full_join(tbl, params, by="scenario")
 mpp$alpha <- 2 * mpp$s * mpp$N
 
 # moments.TwoLocus was fitted with 2 sample sizes, n=40 and n=60
-
 # n = 40
 expectation <- numeric()
 for(i in 1:n_models) {
-  vals <- read.table(paste("selection/single-pop/moments_twoLocus_n40_model_", i, ".csv", sep=""))$V3
+  vals <- read.table(paste("selection/single-pop/bench/moments_twoLocus_n40_model_", i, ".csv", sep=""))$V3
   expectation <- c(expectation, vals)
 }
 
@@ -536,7 +542,7 @@ tbl_py_n40[tbl_py_n40$stats=="Hr_0_0", 1] <- tbl_py_n40[tbl_py_n40$stats=="Hr_0_
 # n = 60
 expectation <- numeric()
 for(i in 1:n_models) {
-  vals <- read.table(paste("selection/single-pop/moments_twoLocus_n60_model_", i, ".csv", sep=""))$V3
+  vals <- read.table(paste("selection/single-pop/bench/moments_twoLocus_n60_model_", i, ".csv", sep=""))$V3
   expectation <- c(expectation, vals)
 }
 
@@ -556,7 +562,7 @@ tbl_pp <- bind_rows(mpp, mpp)
 tbl_pp <- tbl_pp %>% mutate(ratio = expectation / tbl_py_ns$expectation)
 tbl_pp$sample_size <- tbl_py_ns$sample_size
   
-p1 <- ggplot(data=tbl_pp[tbl_pp$stats==commom_stats[1],], aes(x=r, y=ratio, shape=as.factor(N), color=as.factor(sample_size)))
+p1 <- ggplot(data=filter(tbl_pp, stats==commom_stats[1]), aes(x=r, y=ratio, shape=as.factor(N), color=as.factor(sample_size)))
 p1 <- p1 + geom_point(size=3) + geom_line() + theme_bw() + facet_wrap(~s, nrow=1)
 p1 <- p1 + scale_shape_manual(values=0:length((unique(tbl_pp))))
 p1 <- p1 + scale_x_log10(breaks = r) + scale_y_continuous(labels = scale.4d)
@@ -570,7 +576,7 @@ p1 <- p1 + theme(axis.title=element_text(size=12),
                  legend.position="none")
 p1
 
-p2 <- ggplot(data=tbl_pp[tbl_pp$stats==commom_stats[2],], aes(x=r, y=ratio, shape=as.factor(N), color=as.factor(sample_size)))
+p2 <- ggplot(data=filter(tbl_pp, stats==commom_stats[2]), aes(x=r, y=ratio, shape=as.factor(N), color=as.factor(sample_size)))
 p2 <- p2 + geom_point(size=3) + geom_line() + theme_bw() + facet_wrap(~s, nrow=1)
 p2 <- p2 + scale_shape_manual(values=0:length((unique(tbl_pp))))
 p2 <- p2 + scale_x_log10(breaks = r) + scale_y_continuous(labels = scale.4d)
@@ -585,7 +591,7 @@ p2 <- p2 + theme(axis.title=element_text(size=12),
                  legend.position="none")
 p2
 
-p3 <- ggplot(data=tbl_pp[tbl_pp$stats==commom_stats[3],], aes(x=r, y=ratio, shape=as.factor(N), color=as.factor(sample_size)))
+p3 <- ggplot(data=filter(tbl_pp, stats==commom_stats[3]), aes(x=r, y=ratio, shape=as.factor(N), color=as.factor(sample_size)))
 p3 <- p3 + geom_point(size=3) + geom_line() + theme_bw() + facet_wrap(~s, nrow=1)
 p3 <- p3 + scale_shape_manual(values=0:length((unique(tbl_pp))))
 p3 <- p3 + scale_x_log10(breaks = r) + scale_y_continuous(labels = scale.4d)
@@ -600,7 +606,7 @@ p3 <- p3 + theme(axis.title=element_text(size=12),
                  legend.position="none")
 p3
 
-p4 <- ggplot(data=tbl_pp[tbl_pp$stats==commom_stats[4],], aes(x=r, y=ratio, shape=as.factor(N), color=as.factor(sample_size)))
+p4 <- ggplot(data=filter(tbl_pp, stats==commom_stats[4]), aes(x=r, y=ratio, shape=as.factor(N), color=as.factor(sample_size)))
 p4 <- p4 + geom_point(size=3) + geom_line() + theme_bw() + facet_wrap(~s, nrow=1)
 p4 <- p4 + scale_shape_manual(values=0:length((unique(tbl_pp))))
 p4 <- p4 + scale_x_log10(breaks = r) + scale_y_continuous(labels = scale.4d)
@@ -615,7 +621,7 @@ p4 <- p4 + theme(axis.title=element_text(size=12),
                  legend.position="none")
 p4
 
-p5 <- ggplot(data=tbl_pp[tbl_pp$stats==commom_stats[5],], aes(x=r, y=ratio, shape=as.factor(N), color=as.factor(sample_size))) 
+p5 <- ggplot(data=filter(tbl_pp, stats==commom_stats[5]), aes(x=r, y=ratio, shape=as.factor(N), color=as.factor(sample_size))) 
 p5 <- p5 + geom_point(size=3) + geom_line() + theme_bw() + facet_wrap(~s, nrow=1)
 p5 <- p5 + scale_shape_manual(values=0:length((unique(tbl_pp))))
 p5 <- p5 + scale_x_log10(breaks = r) + scale_y_continuous(breaks=pretty_breaks(), labels = scale.4d)
@@ -629,7 +635,7 @@ p5 <- p5 + theme(axis.title=element_text(size=12),
 p5
 
 moms_comp_ratios <- plot_grid(p1, p2, p3, p4, p5, ncol=1, rel_heights=c(1, 1, 1, 1, 1.85))
-save_plot("selection/single-pop/moms_++_vs_py_ratios.pdf", moms_comp_ratios, base_height=10, base_width=20)
+save_plot("selection/single-pop/bench/moms_++_vs_py_ratios.pdf", moms_comp_ratios, base_height=10, base_width=20)
   
 # appending two-locus simulations (performed w/ twoLocusSim binary from momentspp)
 n_reps <- 30
@@ -637,7 +643,7 @@ twoLocusSim <- numeric()
 for(i in 1:n_models) {
   rp <- numeric()
   for(j in 1:n_reps) {
-    vals <- read.table(paste("selection/single-pop/tls_", i, "_rep_", j, ".txt", sep=""))$V3
+    vals <- read.table(paste("selection/single-pop/bench/tls_", i, "_rep_", j, ".txt", sep=""))$V3
     rp <- c(rp, vals)
   }
   twoLocusSim <- c(twoLocusSim, rp)
@@ -671,9 +677,9 @@ df_all <- full_join(df_all, rep_means, by=c("stats", "scenario"))
 df_all <- full_join(df_all, sd, by=c("stats", "scenario")) 
 df_m <- pivot_longer(df_all, cols=c("moments++", "momentsTwoLocus", "twoLocusSim"), names_to="Method")
 
-dd <- df_m[df_m$stats==commom_stats[1],]
-p6 <- ggplot() + geom_errorbar(data=dd[dd$Method=="twoLocusSim",], aes(x=r, ymax=avg + 2*sd, ymin=avg - 2*sd, color=as.factor(N))) + facet_wrap(~s, nrow=1)
-p6 <- p6 + geom_point(data=dd[dd$Method!="twoLocusSim",], aes(x=r, y=value, color=as.factor(N), shape=Method, size=1)) + theme_bw()
+dd <- filter(df_m, stats==commom_stats[1])
+p6 <- ggplot() + geom_errorbar(data=filter(dd, Method=="twoLocusSim"), aes(x=r, ymax=avg + 2*sd, ymin=avg - 2*sd, color=as.factor(N))) + facet_wrap(~s, nrow=1)
+p6 <- p6 + geom_point(data=filter(dd, Method!="twoLocusSim"), aes(x=r, y=value, color=as.factor(N), shape=Method, size=1)) + theme_bw()
 p6 <- p6 + scale_shape_manual(values=c(0, 1))
 p6 <- p6 + scale_x_log10(breaks = r) + scale_y_log10()
 p6 <- p6 + labs(x="r", y=expression(D^2))
@@ -683,11 +689,11 @@ p6 <- p6 + theme(axis.title=element_text(size=16),
                  axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
                  legend.position="bottom")
 p6
-save_plot("selection/single-pop/moms_++_vs_py_dd.pdf", p6, base_height=10, base_width=20)
+save_plot("selection/single-pop/bench/moms_++_vs_py_dd.pdf", p6, base_height=10, base_width=20)
 
-dz <- df_m[df_m$stats==commom_stats[2],]
-p7 <- ggplot() + geom_errorbar(data=dz[dz$Method=="twoLocusSim",], aes(x=r, ymax=avg + 2*sd, ymin=avg - 2*sd, color=as.factor(N))) + facet_wrap(~s, nrow=1)
-p7 <- p7 + geom_point(data=dz[dz$Method!="twoLocusSim",], aes(x=r, y=value, color=as.factor(N), shape=Method, size=1)) + theme_bw()
+dz <- filter(df_m, stats==commom_stats[2])
+p7 <- ggplot() + geom_errorbar(data=filter(dz, Method=="twoLocusSim"), aes(x=r, ymax=avg + 2*sd, ymin=avg - 2*sd, color=as.factor(N))) + facet_wrap(~s, nrow=1)
+p7 <- p7 + geom_point(data=filter(dz, Method!="twoLocusSim"), aes(x=r, y=value, color=as.factor(N), shape=Method, size=1)) + theme_bw()
 p7 <- p7 + scale_shape_manual(values=c(0, 1))
 p7 <- p7 + scale_x_log10(breaks = r) + scale_y_log10()
 p7 <- p7 + labs(x="r", y=expression(Dz))
@@ -697,11 +703,11 @@ p7 <- p7 + theme(axis.title=element_text(size=16),
                  axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
                  legend.position="bottom")
 p7
-save_plot("selection/single-pop/moms_++_vs_py_dz.pdf", p7, base_height=10, base_width=20)
+save_plot("selection/single-pop/bench/moms_++_vs_py_dz.pdf", p7, base_height=10, base_width=20)
 
-hl <- df_m[df_m$stats==commom_stats[3],]
-p8 <- ggplot() + geom_errorbar(data=hl[hl$Method=="twoLocusSim",], aes(x=r, ymax=avg + 2*sd, ymin=avg - 2*sd, color=as.factor(N))) + facet_wrap(~s, nrow=1)
-p8 <- p8 + geom_point(data=hl[hl$Method!="twoLocusSim",], aes(x=r, y=value, color=as.factor(N), shape=Method, size=1)) + theme_bw()
+hl <- filter(df_m, stats==commom_stats[3])
+p8 <- ggplot() + geom_errorbar(data=filter(hl, Method=="twoLocusSim"), aes(x=r, ymax=avg + 2*sd, ymin=avg - 2*sd, color=as.factor(N))) + facet_wrap(~s, nrow=1)
+p8 <- p8 + geom_point(data=filter(hl, Method!="twoLocusSim"), aes(x=r, y=value, color=as.factor(N), shape=Method, size=1)) + theme_bw()
 p8 <- p8 + scale_shape_manual(values=c(0, 1))
 p8 <- p8 + scale_x_log10(breaks=r) + scale_y_log10()
 p8 <- p8 + labs(x="r", y=expression(H[l]))
@@ -711,11 +717,11 @@ p8 <- p8 + theme(axis.title=element_text(size=16),
                  axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
                  legend.position="bottom")
 p8
-save_plot("selection/single-pop/moms_++_vs_py_hl.pdf", p8, base_height=10, base_width=20)
+save_plot("selection/single-pop/bench/moms_++_vs_py_hl.pdf", p8, base_height=10, base_width=20)
 
-hr <- df_m[df_m$stats==commom_stats[4],]
-p9 <- ggplot() + geom_errorbar(data=hr[hr$Method=="twoLocusSim",], aes(x=r, ymax=avg + 2*sd, ymin=avg - 2*sd, color=as.factor(N))) + facet_wrap(~s, nrow=1)
-p9 <- p9 + geom_point(data=hr[hr$Method!="twoLocusSim",], aes(x=r, y=value, color=as.factor(N), shape=Method, size=1)) + theme_bw()
+hr <- filter(df_m, stats==commom_stats[4])
+p9 <- ggplot() + geom_errorbar(data=filter(hr, Method=="twoLocusSim"), aes(x=r, ymax=avg + 2*sd, ymin=avg - 2*sd, color=as.factor(N))) + facet_wrap(~s, nrow=1)
+p9 <- p9 + geom_point(data=filter(hr, Method!="twoLocusSim"), aes(x=r, y=value, color=as.factor(N), shape=Method, size=1)) + theme_bw()
 p9 <- p9 + scale_shape_manual(values=c(0, 1))
 p9 <- p9 + scale_x_log10(breaks=r) + scale_y_log10()
 p9 <- p9 + labs(x="r", y=expression(H[r]))
@@ -725,11 +731,11 @@ p9 <- p9 + theme(axis.title=element_text(size=16),
                  axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
                  legend.position="bottom")
 p9
-save_plot("selection/single-pop/moms_++_vs_py_hr.pdf", p9, base_height=10, base_width=20)
+save_plot("selection/single-pop/bench/moms_++_vs_py_hr.pdf", p9, base_height=10, base_width=20)
 
-pi2 <- df_m[df_m$stats==commom_stats[5],]
-p10 <- ggplot() + geom_errorbar(data=pi2[pi2$Method=="twoLocusSim",], aes(x=r, ymax=avg + 2*sd, ymin=avg - 2*sd, color=as.factor(N))) + facet_wrap(~s, nrow=1)
-p10 <- p10 + geom_point(data=pi2[pi2$Method!="twoLocusSim",], aes(x=r, y=value, color=as.factor(N), shape=Method, size=1)) + theme_bw()
+pi2 <- filter(df_m, stats==commom_stats[5])
+p10 <- ggplot() + geom_errorbar(data=filter(pi2, Method=="twoLocusSim"), aes(x=r, ymax=avg + 2*sd, ymin=avg - 2*sd, color=as.factor(N))) + facet_wrap(~s, nrow=1)
+p10 <- p10 + geom_point(data=filter(pi2, Method!="twoLocusSim"), aes(x=r, y=value, color=as.factor(N), shape=Method, size=1)) + theme_bw()
 p10 <- p10 + scale_shape_manual(values=c(0, 1))
 p10 <- p10 + scale_x_log10(breaks=r) + scale_y_log10()
 p10 <- p10 + labs(x="r", y=expression(pi[2]))
@@ -739,17 +745,20 @@ p10 <- p10 + theme(axis.title=element_text(size=16),
                  axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
                  legend.position="bottom")
 p10
-save_plot("selection/single-pop/moms_++_vs_py_pi2.pdf", p10, base_height=10, base_width=20)
+save_plot("selection/single-pop/bench/moms_++_vs_py_pi2.pdf", p10, base_height=10, base_width=20)
 
 ```
 
 # Simple BGS model
 
-## Single Neutral Locus 
+## Single Neutral Locus
+
+Here we model BGS experienced by a single neutral locus
+at the edge of the chromosome
 
 ### Building Demes files
 
-```{r, demes-BGS, include=F, eval=T, results=F, message=F, warning=F}
+```{r, demes-BGS-single, include=F, eval=T, results=F, message=F, warning=F}
 
 N <- c(2500, 10000)
 u <- c(1e-7, 1e-8, 1e-9)
@@ -817,23 +826,23 @@ for(i in 1:n_models) {
 
 ### Running moments++
 
-```{bash run-moments++BGS, engine.opts='-i', include=F, eval=T, results=F, message=F, warning=F}
+```{bash run-moments++BGS-single, engine.opts='-i', include=F, eval=T, results=F, message=F, warning=F}
 
 source ~/.bashrc
 
-cd selection/single-pop/simple_bgs/
+cd selection/single-pop/simple_bgs/single_neutral/
 
 for m in *.yaml
 do
   momentspp params=opt.bpp F=$m O=20
 done
 
-cd ../../..
+cd ../../../..
 ```
 
 ### Plots
 
-```{r, plots-BGS, include=T, eval=T, results=F, message=F, warning=F}
+```{r, plots-BGS-single, include=T, eval=T, results=F, message=F, warning=F}
 
 params <- read.table("selection/single-pop/simple_bgs/single_neutral/params.csv", sep=",", header=T)
 n_models <- nrow(params)
@@ -866,9 +875,13 @@ for(i in 1:n_models) {
 params$factors <- factors
 params$hr_BGS <- hr_BGS
 
-p1 <- ggplot(data=params[params$u==1e-9,], aes(x=s, y=hr_BGS, color=as.factor(N)))
+for(i in unique(params$u)) { # TODO
+  p <- ggplot()  
+}
+
+p1 <- ggplot(data=filter(params, u==1e-9), aes(x=s, y=hr_BGS, color=as.factor(N)))
 p1 <- p1 + geom_line() + geom_point(size=3) + facet_wrap(~r, nrow=1) + theme_bw()
-p1 <- p1 + geom_hline(data=params[params$u==1e-9,], aes(yintercept=pi0, color=as.factor(N)), linetype="dashed")
+p1 <- p1 + geom_hline(data=filter(params, u==1e-9), aes(yintercept=pi0, color=as.factor(N)), linetype="dashed")
 p1 <- p1 + scale_x_continuous(breaks=pretty_breaks())
 p1 <- p1 + scale_y_log10(breaks=c(5e-6, 1e-5, 2e-5), labels=function(x) format(x, scientific=T))
 p1 <- p1 + labs(title="Two-locus Hr BGS", x="s", y=expression(mu[1e-9]))
@@ -882,9 +895,9 @@ p1 <- p1 + theme(axis.title=element_text(size=16),
                  legend.text=element_text(size=16), 
                  legend.position="none")
 
-p2 <- ggplot(data=params[params$u==1e-8,], aes(x=s, y=hr_BGS, color=as.factor(N)))
+p2 <- ggplot(data=filter(params, u==1e-8), aes(x=s, y=hr_BGS, color=as.factor(N)))
 p2 <- p2 + geom_line() + geom_point(size=3) + facet_wrap(~r, nrow=1) + theme_bw()
-p2 <- p2 + geom_hline(data=params[params$u==1e-8,], aes(yintercept=pi0, color=as.factor(N)), linetype="dashed")
+p2 <- p2 + geom_hline(data=filter(params, u==1e-8), aes(yintercept=pi0, color=as.factor(N)), linetype="dashed")
 p2 <- p2 + scale_x_continuous(breaks=pretty_breaks())
 p2 <- p2 + scale_y_log10(breaks=c(5e-5, 1e-4, 2e-4), labels=function(x) format(x, scientific=T))
 p2 <- p2 + labs(title=NULL, x="s", y=expression(mu=mu[1e-8]))
@@ -1006,9 +1019,12 @@ save_plot("selection/single-pop/simple_bgs/bgs_single_neutral_5.pdf", p9, base_h
 
 ## Multiple Neutral Loci
 
+We now model multiple neutral loci, interdigitated with 
+constrained, non-recombining loci of length l
+
 ### Building Demes files
 
-```{r, demes-BGS, include=F, eval=T, results=F, message=F, warning=F}
+```{r, demes-BGS-mult, include=F, eval=T, results=F, message=F, warning=F}
 
 N <- 10000
 u <- c(1e-7, 1e-8, 1e-9)
@@ -1082,23 +1098,23 @@ for(i in 1:n_models) {
 
 ### Running moments++
 
-```{bash run-moments++BGS, engine.opts='-i', include=F, eval=T, results=F, message=F, warning=F}
+```{bash run-moments++BGS-mult, engine.opts='-i', include=F, eval=T, results=F, message=F, warning=F}
 
 source ~/.bashrc
 
-cd selection/single-pop/simple_bgs/
+cd selection/single-pop/simple_bgs/mult_neutral/
 
 for m in *.yaml
 do
   momentspp params=opt.bpp F=$m O=20
 done
 
-cd ../../..
+cd ../../../..
 ```
 
 ### Plots
 
-```{r, plots-BGS, include=T, eval=T, results=F, message=F, warning=F}
+```{r, plots-BGS-mult, include=T, eval=T, results=F, message=F, warning=F}
 
 params <- read.table("selection/single-pop/simple_bgs/mult_neutral/params.csv", sep=",", header=T)
 n_models <- nrow(params)
@@ -1135,11 +1151,11 @@ windows <- bind_cols(params, hr_tbl)
 molten_windows <- pivot_longer(windows, cols=(ncol(params) + 1):ncol(windows), names_to="window")
 molten_windows$window <- as.numeric(molten_windows$window)
 
-p1 <- ggplot(data=molten_windows[molten_windows$u==1e-9,], aes(x=window, y=value, color=as.factor(alpha)))
+p1 <- ggplot(data=filter(molten_windows, u==1e-9), aes(x=window, y=value, color=as.factor(alpha)))
 p1 <- p1 + geom_point(size=1) + facet_wrap(~r, nrow=1) + theme_bw()
 p1 <- p1 + scale_x_discrete(breaks=pretty_breaks())
 p1 <- p1 + scale_y_continuous(breaks=pretty_breaks())
-p1 <- p1 + geom_hline(yintercept=molten_windows[molten_windows$u==1e-9,]$pi0, linetype="dashed")
+p1 <- p1 + geom_hline(yintercept=filter(molten_windows, u==1e-9)["pi0"], linetype="dashed")
 p1 <- p1 + labs(title="Two-locus Hr BGS windows, mu=1e-9", x="Window", y=expression(H[r]))
 p1 <- p1 + theme(axis.title=element_text(size=16),
                  axis.text=element_text(size=12),
@@ -1148,11 +1164,11 @@ p1 <- p1 + theme(axis.title=element_text(size=16),
 
 save_plot("selection/single-pop/simple_bgs/bgs_mult_neutral_1.pdf", p1, base_height=12, base_width=20)
 
-p2 <- ggplot(data=molten_windows[molten_windows$u==1e-8,], aes(x=window, y=value, color=as.factor(alpha)))
+p2 <- ggplot(data=filter(molten_windows, u==1e-8), aes(x=window, y=value, color=as.factor(alpha)))
 p2 <- p2 + geom_point(size=1) + facet_wrap(~r, nrow=1) + theme_bw()
 p2 <- p2 + scale_x_discrete(breaks=pretty_breaks())
 p2 <- p2 + scale_y_continuous(breaks=pretty_breaks())
-p2 <- p2 + geom_hline(yintercept=molten_windows[molten_windows$u==1e-8,]$pi0, linetype="dashed")
+p2 <- p2 + geom_hline(yintercept=filter(molten_windows, u==1e-8)["pi0"], linetype="dashed")
 p2 <- p2 + labs(title="Two-locus Hr BGS windows, mu=1e-8", x="Window", y=expression(H[r]))
 p2 <- p2 + theme(axis.title=element_text(size=16),
                  axis.text=element_text(size=12),
@@ -1161,11 +1177,11 @@ p2 <- p2 + theme(axis.title=element_text(size=16),
 
 save_plot("selection/single-pop/simple_bgs/bgs_mult_neutral_2.pdf", p2, base_height=12, base_width=20)
 
-p3 <- ggplot(data=molten_windows[molten_windows$u==1e-7,], aes(x=window, y=value, color=as.factor(alpha)))
+p3 <- ggplot(data=filter(molten_windows, u==1e-7), aes(x=window, y=value, color=as.factor(alpha)))
 p3 <- p3 + geom_point(size=1) + facet_wrap(~r, nrow=1) + theme_bw()
 p3 <- p3 + scale_x_discrete(breaks=pretty_breaks())
 p3 <- p3 + scale_y_continuous(breaks=pretty_breaks())
-p3 <- p3 + geom_hline(yintercept=molten_windows[molten_windows$u==1e-7,]$pi0, linetype="dashed")
+p3 <- p3 + geom_hline(yintercept=filter(molten_windows, u==1e-7)["pi0"], linetype="dashed")
 p3 <- p3 + labs(title="Two-locus Hr BGS windows, mu=1e-7", x="Window", y=expression(H[r]))
 p3 <- p3 + theme(axis.title=element_text(size=16),
                  axis.text=element_text(size=12),
@@ -1184,7 +1200,7 @@ mutation rate changes both mu_l and mu_r
 
 ### Building Demes files
 
-```{r, demes-BGS-1, include=F, eval=T, results=F, message=F, warning=F}
+```{r, BGS-mutvar-params, include=F, eval=T, results=F, message=F, warning=F}
 
 N <- c(1000, 10000)
 # number of independent genomic windows, each corresponding to a two-locus system
@@ -1193,11 +1209,11 @@ w <- 100
 l <- c(100, 1000)
 # Gamma dist params
 # DFE
-scale_sel <- c(1e-5, 1e-4, 5e-4)
+scale_sel <- c(5e-6, 5e-5, 5e-4)
 shape_sel <- 20
 # mut rates
 scales_mu <- c(1e-7, 1e-8, 1e-9)
-shapes_mu <- c(1, 10, 30, 100, 1000000)
+shapes_mu <- c(1, 10, 30, 100, 300, 1000000)
 # rec rates
 scales_rec <- c(1e-4, 1e-5, 1e-6, 1e-7, 1e-8, 1e-9, 0)
 shapes_rec <- c(0.1, 1, 10, 1000000)
@@ -1212,7 +1228,7 @@ Sys.setenv(num_models=n_models)
 Sys.setenv(w=w)
 ```
 
-```{bash make_dirs, engine.opts='-i', include=F, eval=T, results=F, message=F, warning=F}
+```{bash make_dirs_mutvar, engine.opts='-i', include=F, eval=T, results=F, message=F, warning=F}
 
 source ~/.bashrc
 
@@ -1226,7 +1242,7 @@ done
 cd ../../..
 ```
 
-```{r, demes-BGS-2, include=F, eval=T, results=F, message=F, warning=F}
+```{r, BGS-mutvar-demes, include=F, eval=T, results=F, message=F, warning=F}
 
 for(i in 1:n_models) {
   
@@ -1307,7 +1323,7 @@ for(i in 1:n_models) {
 
 ### Running moments++
 
-```{bash run-moments++BGS, engine.opts='-i', include=F, eval=T, results=F, message=F, warning=F}
+```{bash run-moments++BGS-mutvar, engine.opts='-i', include=F, eval=T, results=F, message=F, warning=F}
 
 source ~/.bashrc
 
@@ -1331,7 +1347,7 @@ cd ../../..
 
 ### Plots
 
-```{r, plots-BGS, include=T, eval=T, results=F, message=F, warning=F}
+```{r, plots-BGS-mutvar, include=T, eval=T, results=F, message=F, warning=F}
 
 params <- read.table("selection/single-pop/mut_rate_var/params.csv", sep=",", header=T)
 n_models <- nrow(params)
@@ -1585,7 +1601,7 @@ mutation rate changes ONLY mu_l
 
 ### Building demes files
 
-```{r, demes-BGS-2, include=F, eval=T, results=F, message=F, warning=F}
+```{r, params-BGS-mutvar-2, include=F, eval=T, results=F, message=F, warning=F}
 
 N <- 10000
 # number of independent genomic windows, each corresponding to a two-locus system
@@ -1594,10 +1610,8 @@ w <- 100
 l <- 100
 # Gamma dist params
 # DFE
-scale_sel <- c(1e-5, 1e-4, 5e-4)
+scale_sel <- c(5e-6, 5e-5, 5e-4)
 shape_sel <- 20
-# mut rate right locus
-mu_r <- 1e-8
 # mut rates left locus
 scales_mu <- c(1e-7, 1e-8, 1e-9)
 shapes_mu <- c(10, 100, 1000000)
@@ -1615,7 +1629,7 @@ Sys.setenv(num_models=n_models)
 Sys.setenv(w=w)
 ```
 
-```{bash make_dirs, eval=T, message=FALSE, warning=FALSE, engine.opts='-i', include=F, results=F}
+```{bash make_dirs_mutvar_2, eval=T, message=FALSE, warning=FALSE, engine.opts='-i', include=F, results=F}
 
 source ~/.bashrc
 
@@ -1629,7 +1643,7 @@ done
 cd ../../..
 ```
 
-```{r, demes-BGS-2, include=F, eval=T, results=F, message=F, warning=F}
+```{r, BGS-mutvar-demes-2, include=F, eval=T, results=F, message=F, warning=F}
 
 for(i in 1:n_models) {
   
@@ -1655,7 +1669,6 @@ for(i in 1:n_models) {
   
   windows <- bind_cols(mus, rs, ss, .name_repair="unique")
   names(windows) <- c("mus", "recs", "dfe")
-  windows$pi0 <- 2 * params$N[i] * windows$mus
   windows$alpha <- alpha
   
   write.csv(windows, paste("selection/single-pop/mut_rate_var_left/model_", i, "/windows.csv", sep=""), quote=F, row.names=F)
@@ -1664,7 +1677,7 @@ for(i in 1:n_models) {
     
     for(k in 1:w) { # right locus
       
-      mu_ratio <- l * windows$mus[j] / params$mu_r[k] # left / right
+      mu_ratio <- l * windows$mus[j] / params$scales_mu[k] # left / right
       total_r <- colSums(windows[j:k,])["recs"]
       
       name <- paste("model_", i, "_l_", j, "_r_", k, sep="")
@@ -1686,7 +1699,7 @@ for(i in 1:n_models) {
       cat("    epochs:\n")
       cat("      - end_time: 0\n")
       cat("        rates: [")
-      cat(params$mu_r[k])
+      cat(params$scales_mu[k])
       cat("]\n")
       cat("  - name: recombination\n")
       cat("    epochs:\n")
@@ -1710,7 +1723,7 @@ for(i in 1:n_models) {
 
 ### Running moments++
 
-```{bash run-moments++BGS, engine.opts='-i', include=F, eval=T, results=F, message=F, warning=F}
+```{bash run-moments++BGS-mutvar-2, engine.opts='-i', include=F, eval=T, results=F, message=F, warning=F}
 
 source ~/.bashrc
 
@@ -1734,7 +1747,7 @@ cd ../../..
 
 ### Plots
 
-```{r, plots-BGS, include=T, eval=T, results=F, message=F, warning=F}
+```{r, plots-BGS-mutvar-2, include=T, eval=T, results=F, message=F, warning=F}
 
 params <- read.table("selection/single-pop/mut_rate_var_left/params.csv", sep=",", header=T)
 n_models <- nrow(params)
@@ -1753,13 +1766,13 @@ for(i in 1:n_models) {
   
   for(j in 1:w) { # right locus
   
-    pi0 <- windows$pi0[j]  
+    pi0 <- 2 * params$N[i] * params$mu_r[i]
     one_minus_f <- numeric(length=w)
       
     for(k in 1:w) { # left locus
       
       name <- paste("model_", i, "_l_", k, "_r_", j, "_expectations.txt", sep="")
-      expectations <- read.table(paste("selection/single-pop/mut_rate_var_left/model", i, "/", name, sep=""))
+      expectations <- read.table(paste("selection/single-pop/mut_rate_var_left/model_", i, "/", name, sep=""))
       
       hr <- expectations[expectations$V1 == "Hr_0_0",]$V3
       one_minus_f[k] <- hr / pi0
